--- a/data/css/styles.css
+++ b/data/css/styles.css
@@ -3,3 +3,13 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.imgCont{
+  background-size: cover;
+  background-color: black;
+  width: 100%; 
+  height: 100vh;
+  box-shadow: 0 0 30px 10px black inset;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
