--- a/data/css/styles.css
+++ b/data/css/styles.css
@@ -29,3 +29,11 @@ input::-webkit-inner-spin-button {
   border-color: #e46600;
   color: white;
 }
+
+.i-orange{
+  color: var(--orange);
+}
+
+.i-orange:hover{
+  color: #e46600;
+}
