--- a/data/css/styles.css
+++ b/data/css/styles.css
@@ -1,7 +1,25 @@
+@import url(//fonts.googleapis.com/css?family=Raleway);
+
+body {
+  font-family: 'Poppins', sans-serif !important;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.preloader{
+  width: 100%;
+  height: 100vh;
+  background-color: var(--dark);
+  position: fixed;
+  z-index: 10000 !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation-play-state: paused;
 }
 
 .imgCont{
